--- a/day6 - kotlin4/App/DatingApp/app/src/main/AndroidManifest.xml
+++ b/day6 - kotlin4/App/DatingApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -20,6 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DatingApp"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.LineActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.FriendActivity"
             android:exported="false" />
@@ -61,4 +68,5 @@
                 android:resource="@xml/file_paths" />
         </provider>
     </application>
+
 </manifest>
